@@ -9,27 +9,30 @@ import com.nimbusds.jose.crypto.MACSigner;
 import com.nimbusds.jose.crypto.MACVerifier;
 import com.nimbusds.jwt.JWTClaimsSet;
 import com.nimbusds.jwt.SignedJWT;
+import com.sprint.mission.discodeit.dto.data.UserDto;
 import com.sprint.mission.discodeit.security.DiscodeitUserDetails;
 import jakarta.servlet.http.Cookie;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
 import java.nio.charset.StandardCharsets;
+import java.util.Collection;
+import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Component;
 
 @Slf4j
 @Component
 public class JwtTokenProvider {
 
-    public static final String REFRESH_TOKEN_COOKIE_NAME = "REFRESH-TOKEN";
+    public static final String REFRESH_TOKEN_COOKIE_NAME = "REFRESH_TOKEN";
 
-    private final long accessTokenExpirationMs;
-    private final long refreshTokenExpirationMs;
+    private final int accessTokenExpirationMs;
+    private final int refreshTokenExpirationMs;
 
     private final JWSSigner accessTokenSigner;
     private final JWSVerifier accessTokenVerifier;
@@ -37,153 +40,181 @@ public class JwtTokenProvider {
     private final JWSVerifier refreshTokenVerifier;
 
     public JwtTokenProvider(
-            @Value("${jwt.access-token.secret}") String accessTokenSecret,
-            @Value("${jwt.access-token.exp}") long accessTokenExpirationMs,
-            @Value("${jwt.refresh-token.secret}") String refreshTokenSecret,
-            @Value("${jwt.refresh-token.exp}") long refreshTokenExpirationMs
-    ) throws JOSEException {
-
-        byte[] a = accessTokenSecret.getBytes(StandardCharsets.UTF_8);
-        byte[] r = refreshTokenSecret.getBytes(StandardCharsets.UTF_8);
-        if (a.length < 32 || r.length < 32) {
-            throw new IllegalStateException("JWT HS256 secrets must be at least 32 bytes.");
-        }
+            @Value("${discodeit.jwt.access-token.secret}") String accessTokenSecret,
+            @Value("${discodeit.jwt.access-token.expiration-ms}") int accessTokenExpirationMs,
+            @Value("${discodeit.jwt.refresh-token.secret}") String refreshTokenSecret,
+            @Value("${discodeit.jwt.refresh-token.expiration-ms}") int refreshTokenExpirationMs)
+            throws JOSEException {
 
         this.accessTokenExpirationMs = accessTokenExpirationMs;
         this.refreshTokenExpirationMs = refreshTokenExpirationMs;
 
-        this.accessTokenSigner = new MACSigner(a);
-        this.accessTokenVerifier = new MACVerifier(a);
-        this.refreshTokenSigner = new MACSigner(r);
-        this.refreshTokenVerifier = new MACVerifier(r);
+        byte[] accessSecretBytes = accessTokenSecret.getBytes(StandardCharsets.UTF_8);
+        this.accessTokenSigner = new MACSigner(accessSecretBytes);
+        this.accessTokenVerifier = new MACVerifier(accessSecretBytes);
+
+        byte[] refreshSecretBytes = refreshTokenSecret.getBytes(StandardCharsets.UTF_8);
+        this.refreshTokenSigner = new MACSigner(refreshSecretBytes);
+        this.refreshTokenVerifier = new MACVerifier(refreshSecretBytes);
     }
 
-    /* ===== 발급 ===== */
-    public String generateAccessToken(DiscodeitUserDetails user) throws JOSEException {
-        return generateToken(user, accessTokenExpirationMs, accessTokenSigner, "access");
+    public String generateAccessToken(DiscodeitUserDetails userDetails) throws JOSEException {
+        return generateToken(userDetails, accessTokenExpirationMs, accessTokenSigner, "access");
     }
 
-    public String generateRefreshToken(DiscodeitUserDetails user) throws JOSEException {
-        return generateToken(user, refreshTokenExpirationMs, refreshTokenSigner, "refresh");
+    public String generateRefreshToken(DiscodeitUserDetails userDetails) throws JOSEException {
+        return generateToken(userDetails, refreshTokenExpirationMs, refreshTokenSigner, "refresh");
     }
 
-    private String generateToken(DiscodeitUserDetails user, long expMs, JWSSigner signer,
-                                 String type)
-            throws JOSEException {
+    private String generateToken(
+            DiscodeitUserDetails userDetails,
+            int expirationMs,
+            JWSSigner signer,
+            String tokenType
+    ) throws JOSEException {
+        String tokenId = UUID.randomUUID().toString();
+        UserDto user = userDetails.getUserDto();
 
         Date now = new Date();
-        Date expiry = new Date(now.getTime() + expMs);
+        Date expiryDate = new Date(now.getTime() + expirationMs);
 
-        List<String> roles = user.getAuthorities().stream()
+        List<String> expandedRoles = userDetails.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
-                .toList();
+                .flatMap(auth -> {
+                    if ("ROLE_ADMIN".equals(auth)) {
+                        return List.of("ROLE_ADMIN", "ROLE_CHANNEL_MANAGER", "ROLE_USER").stream();
+                    } else if ("ROLE_CHANNEL_MANAGER".equals(auth)) {
+                        return List.of("ROLE_CHANNEL_MANAGER", "ROLE_USER").stream();
+                    } else {
+                        return List.of(auth).stream();
+                    }
+                })
+                .distinct()
+                .collect(Collectors.toList());
 
-        JWTClaimsSet claims = new JWTClaimsSet.Builder()
-                .subject(user.getUsername())                      // username
-                .jwtID(UUID.randomUUID().toString())              // jti
-                .claim("uid", user.getUserDto().id().toString())  // 사용자 UUID
-                .claim("roles", roles)
-                .claim("type", type)                              // access | refresh
+        JWTClaimsSet claimsSet = new JWTClaimsSet.Builder()
+                .subject(user.username())
+                .jwtID(tokenId)
+                .claim("userId", user.id().toString())
+                .claim("type", tokenType)
+                .claim("roles", expandedRoles)
                 .issueTime(now)
-                .expirationTime(expiry)
+                .expirationTime(expiryDate)
                 .build();
 
-        SignedJWT jwt = new SignedJWT(new JWSHeader(JWSAlgorithm.HS256), claims);
-        jwt.sign(signer);
-        return jwt.serialize();
+        SignedJWT signedJWT = new SignedJWT(new JWSHeader(JWSAlgorithm.HS256), claimsSet);
+        signedJWT.sign(signer);
+
+        String token = signedJWT.serialize();
+        log.debug("Generated {} token for user: {}, roles={}", tokenType, user.username(), expandedRoles);
+        return token;
     }
 
-    /* ===== 검증 ===== */
     public boolean validateAccessToken(String token) {
-        return verify(token, accessTokenVerifier, "access");
+        return validateToken(token, accessTokenVerifier, "access");
     }
 
     public boolean validateRefreshToken(String token) {
-        return verify(token, refreshTokenVerifier, "refresh");
+        return validateToken(token, refreshTokenVerifier, "refresh");
     }
 
-    private boolean verify(String token, JWSVerifier verifier, String expectedType) {
+    private boolean validateToken(String token, JWSVerifier verifier, String expectedType) {
         try {
-            SignedJWT jwt = SignedJWT.parse(token);
-            if (!jwt.verify(verifier)) {
+            SignedJWT signedJWT = SignedJWT.parse(token);
+
+            // Verify signature
+            if (!signedJWT.verify(verifier)) {
+                log.debug("JWT signature verification failed for {} token", expectedType);
                 return false;
             }
 
-            String type = (String) jwt.getJWTClaimsSet().getClaim("type");
-            if (!expectedType.equals(type)) {
+            // Check token type
+            String tokenType = (String) signedJWT.getJWTClaimsSet().getClaim("type");
+            if (!expectedType.equals(tokenType)) {
+                log.debug("JWT token type mismatch: expected {}, got {}", expectedType, tokenType);
                 return false;
             }
 
-            Date exp = jwt.getJWTClaimsSet().getExpirationTime();
-            return exp != null && exp.after(new Date());
+            // Check expiration
+            Date expirationTime = signedJWT.getJWTClaimsSet().getExpirationTime();
+            if (expirationTime == null || expirationTime.before(new Date())) {
+                log.debug("JWT {} token expired", expectedType);
+                return false;
+            }
+
+            return true;
         } catch (Exception e) {
-            log.debug("JWT verify failed: {}", e.getMessage());
+            log.debug("JWT {} token validation failed: {}", expectedType, e.getMessage());
             return false;
         }
     }
 
-    /* ===== 파싱 헬퍼 ===== */
-    public String getUsername(String token) {
+    public String getUsernameFromToken(String token) {
         try {
-            return SignedJWT.parse(token).getJWTClaimsSet().getSubject();
+            SignedJWT signedJWT = SignedJWT.parse(token);
+            return signedJWT.getJWTClaimsSet().getSubject();
         } catch (Exception e) {
-            return null;
+            throw new IllegalArgumentException("Invalid JWT token", e);
         }
     }
 
     public String getTokenId(String token) {
         try {
-            return SignedJWT.parse(token).getJWTClaimsSet().getJWTID();
+            SignedJWT signedJWT = SignedJWT.parse(token);
+            return signedJWT.getJWTClaimsSet().getJWTID();
         } catch (Exception e) {
-            return null;
+            throw new IllegalArgumentException("Invalid JWT token", e);
         }
-    }
-
-    public Cookie buildRefreshCookie(String refreshToken) {
-        Cookie c = new Cookie(REFRESH_TOKEN_COOKIE_NAME, refreshToken);
-        c.setHttpOnly(true);
-        c.setSecure(false);
-        c.setPath("/");
-        c.setMaxAge((int) (refreshTokenExpirationMs / 1000));
-        return c;
-    }
-
-    public Cookie buildExpireRefreshCookie() {
-        Cookie c = new Cookie(REFRESH_TOKEN_COOKIE_NAME, "");
-        c.setHttpOnly(true);
-        c.setSecure(false);
-        c.setPath("/");
-        c.setMaxAge(0);
-        return c;
-    }
-
-    public void addRefreshCookie(HttpServletResponse res, String refreshToken) {
-        res.addCookie(buildRefreshCookie(refreshToken));
-    }
-
-    public void expireRefreshCookie(HttpServletResponse res) {
-        res.addCookie(buildExpireRefreshCookie());
-    }
-
-    public String resolveRefreshToken(HttpServletRequest request) {
-        if (request.getCookies() == null) {
-            return null;
-        }
-        for (Cookie c : request.getCookies()) {
-            if (REFRESH_TOKEN_COOKIE_NAME.equals(c.getName())) {
-                return c.getValue();
-            }
-        }
-        return null;
     }
 
     public UUID getUserId(String token) {
         try {
-            String uid = (String) SignedJWT.parse(token).getJWTClaimsSet().getClaim("uid");
-            return uid != null ? UUID.fromString(uid) : null;
+            SignedJWT signedJWT = SignedJWT.parse(token);
+            String userIdStr = (String) signedJWT.getJWTClaimsSet().getClaim("userId");
+            if (userIdStr == null) {
+                throw new IllegalArgumentException("User ID claim not found in JWT token");
+            }
+            return UUID.fromString(userIdStr);
         } catch (Exception e) {
-            return null;
+            throw new IllegalArgumentException("Invalid JWT token", e);
         }
     }
 
+    public Cookie genereateRefreshTokenCookie(String refreshToken) {
+        // Set refresh token in HttpOnly cookie
+        Cookie refreshCookie = new Cookie(REFRESH_TOKEN_COOKIE_NAME, refreshToken);
+        refreshCookie.setHttpOnly(true);
+        refreshCookie.setSecure(true); // Use HTTPS in production
+        refreshCookie.setPath("/");
+        refreshCookie.setMaxAge(refreshTokenExpirationMs / 1000);
+        return refreshCookie;
+    }
+
+    public Cookie genereateRefreshTokenExpirationCookie() {
+        Cookie refreshCookie = new Cookie(REFRESH_TOKEN_COOKIE_NAME, "");
+        refreshCookie.setHttpOnly(true);
+        refreshCookie.setSecure(true); // Use HTTPS in production
+        refreshCookie.setPath("/");
+        refreshCookie.setMaxAge(0);
+        return refreshCookie;
+    }
+
+    @SuppressWarnings("unchecked")
+    public Collection<? extends GrantedAuthority> getAuthorities(String token) {
+        try {
+            SignedJWT signedJWT = SignedJWT.parse(token);
+            List<String> roles = (List<String>) signedJWT.getJWTClaimsSet().getClaim("roles");
+
+            if (roles == null) {
+                return Collections.emptyList();
+            }
+
+            return roles.stream()
+                    .map(SimpleGrantedAuthority::new)
+                    .collect(Collectors.toList());
+
+        } catch (Exception e) {
+            throw new IllegalArgumentException("Invalid JWT token", e);
+        }
+    }
 }
